# hh_vacancies

./: .gitignore  README.md  main.py  pyproject.toml
src/: func.py  save_vacs.py  vacs.py
tests/: test_func.py  test_save_vacs.py  test_vacs.py
